--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -1,13 +1,25 @@
-name: Installing Python
+
+name: Matrix Workflow Demo
 
 on: [push]
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-14, windows-latest]
+        py-version: [3.10, 3.11, 3.12]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.10
-        
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.py-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.py-version }}
+      - name: Display Python version
+        run: python --version
+      - name: Example Script (you can add your build steps here)
+        run: |
+          echo "Running on ${{ matrix.os }} with Python ${{ matrix.py-version }}"
+          # Add your actual build commands here
+
