--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -1,25 +1,31 @@
-
-name: Matrix Workflow Demo
-
+name: Matrix Workflow with Exclusion
 on: [push]
 jobs:
   build:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
-        py-version: [3.9, 3.11, 3.12]
+        py-version: [3.10, 3.11, 3.12]
+        exclude:
+          - os: macos-14
+            py-version: 3.12
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.py-version }}
+      - name: Set up Python ${{ matrix.py-version }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py-version }}
-      - name: Display Python version
-        run: python --version
-      - name: Example Script (you can add your build steps here)
+      - name: Display Python and OS
         run: |
           echo "Running on ${{ matrix.os }} with Python ${{ matrix.py-version }}"
-          # Add your actual build commands here
+          python --version
+      - name: Example Script (you can add your build steps here)
+        run: |
+          echo "Your build steps go here for ${{ matrix.os }} and Python ${{ matrix.py-version }}"
+
+
+
+
 
